--- a/_site.yml
+++ b/_site.yml
@@ -1,5 +1,5 @@
 name: "."
-title: "A distill example"
+title: "An example"
 description: |
   Instructions to make a distill website in program R
 output_dir: "docs"
@@ -9,4 +9,6 @@ navbar:
       href: index.html
     - text: "About"
       href: about.html
+    - icon: fab fa-github
+      href: https://github.com/NathanWhitmore/Distill_example
 output: distill::distill_article
